applications/services/penpot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: penpot
  labels:
    managed-by: argocd
